--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -914,81 +914,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>667</th>\n",
-       "      <td>61</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>45</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>33.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>30</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>80</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>40</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>76</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833</th>\n",
+       "      <th>906</th>\n",
+       "      <td>55</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>51</td>\n",
+       "      <td>6.5</td>\n",
        "      <td>5.2</td>\n",
-       "      <td>63</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>505</th>\n",
+       "      <td>60</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>179</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>1.3</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>33.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>381</th>\n",
-       "      <td>57</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>3.7</td>\n",
+       "      <th>695</th>\n",
+       "      <td>68</td>\n",
        "      <td>2.9</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>5.5</td>\n",
+       "      <td>35</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>55</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>53</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>822</th>\n",
+       "      <td>60</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>78</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>1.3</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     AGE  Urea  Cr  HbA1c  Chol    TG  HDL  LDL  VLDL   BMI\n",
-       "667   61   2.5  45   11.6   9.7  13.8  1.0  3.1   6.3  33.0\n",
-       "26    30   4.8  80    5.5   5.5   1.8  1.2  3.5   0.8  19.0\n",
-       "187   40   5.9  76    4.0   5.0   2.1  1.6  3.0   0.9  24.0\n",
-       "833   51   5.2  63   11.0   6.7   2.1  1.8  1.3   1.0  33.0\n",
-       "381   57   5.3  66    7.9   3.7   2.9  1.1  5.5   1.3  36.0"
+       "     AGE  Urea   Cr  HbA1c  Chol   TG  HDL  LDL  VLDL   BMI\n",
+       "906   55   2.0   51    6.5   5.2  2.3  1.2  4.3   1.4  22.0\n",
+       "505   60  14.5  179    8.7   5.0  1.8  1.1  1.0   0.8  33.0\n",
+       "695   68   2.9   35   11.5   4.9  2.1  2.3  1.8   0.8  33.0\n",
+       "451   55   2.7   53    7.3   4.1  3.3  0.9  2.1   1.5  29.0\n",
+       "822   60   4.0   78   14.1   4.1  1.3  1.8  3.6   2.0  33.0"
       ]
      },
      "execution_count": 25,
@@ -3283,7 +3283,7 @@
    "source": [
     "log_pipeline = Pipeline([\n",
     "    (\"scaler\", StandardScaler()),\n",
-    "    (\"clf\", LogisticRegression(max_iter=1000))\n",
+    "    (\"clf\", LogisticRegression(solver=\"lbfgs\", max_iter=1000))\n",
     "])\n",
     "\n",
     "log_param_grid = {\n",
@@ -3782,7 +3782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 84,
    "id": "af58fb9c",
    "metadata": {},
    "outputs": [
@@ -3804,7 +3804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 85,
    "id": "ed951038",
    "metadata": {},
    "outputs": [
